Fikset queries og OpenAPI spec
